--- a/css/task6/task6.css
+++ b/css/task6/task6.css
@@ -1,6 +1,7 @@
 body {
-    margin:0;  
-                                                 /* 清除边距 */
+    margin:0 auto;  
+    max-width: 768px; 
+    min-width: 320px;                                        /* 清除边距 */
   }
   
   .header {                                        /* 页头 绝对定位 优先级99999 */
@@ -65,25 +66,24 @@ body {
        border-bottom: 1px solid #e1e5e7;
     
   }
-  
-  .opt select {                                    /* 下拉框详细设置 */
-      height: 50px;
-      border: none;
-      outline:none;
-      border-right: 1px solid #e1e5e7;
-      font-size: 17px;
-      color: #999999;
-      text-align-last:center;
-      border-image: -webkit-linear-gradient(#fff, #e1e5e7,#fff) 1; 
-      flex-grow:1;
-  }
-  
+
 
 .box1 {
-    display: flex;
-    width: 33%;
+  flex:1;
+
+
+  height: 50px;
+  border: none;
+  outline:none;
+  border-right: 1px solid #e1e5e7;
+  font-size: 17px;
+  color: #999999;
+  text-align-last:center;
+  border-image: -webkit-linear-gradient(#fff, #e1e5e7,#fff) 1; 
     
 }
+
+
   .synopsis {                                     /* 父级flex盒子 */
   display: flex;
   justify-content:space-between;
