--- a/css/task6/task6.css
+++ b/css/task6/task6.css
@@ -5,6 +5,8 @@ body {
   }
   
   .header {                                        /* 页头 绝对定位 优先级99999 */
+    max-width: 768px; 
+    min-width: 320px;
     width: 100%;
     height: 50px;
     background-color: #5fc0cd;
@@ -13,6 +15,7 @@ body {
     display: flex;
     justify-content:space-between;
     align-items: center;
+   
   }
   
   .void {
@@ -70,8 +73,6 @@ body {
 
 .box1 {
   flex:1;
-
-
   height: 50px;
   border: none;
   outline:none;
@@ -79,7 +80,7 @@ body {
   font-size: 17px;
   color: #999999;
   text-align-last:center;
-  border-image: -webkit-linear-gradient(#fff, #e1e5e7,#fff) 1; 
+  border-image:linear-gradient(#fff, #e1e5e7,#fff) 1; 
     
 }
 
@@ -170,6 +171,8 @@ body {
   
   
   .footer {                                    /* 页尾 固定定位 */
+  max-width: 768px; 
+  min-width: 320px;
   width: 100%;
   height: 50px;
   bottom: 0;
@@ -179,6 +182,7 @@ body {
   display: flex;
   justify-content:center;
   align-items: center;
+  
   } 
   
   .box {                                     /* 页尾设置居中弹性盒子 */
