--- a/css/task7/3c.css
+++ b/css/task7/3c.css
@@ -1,3 +1,4 @@
+
 body {
     max-width: 768px;
     min-width: 320px;
@@ -55,82 +56,66 @@ body {
     margin-bottom: 30px;
 }
 .choice {
-
-
+max-width: 768px;
+min-width: 320px;
+width: 100%;
+height: 100vmin;
+margin-top: -5%;
+margin-left: 2%;
+padding-bottom: 40%;
 }
-.one {
-    width: 92%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-}
-.block {
-    width: 100px;
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    border: 3px solid #ffffff;
 
-}
 .block1 {
-    width: 100px;
-    height:100px;
+    width: 21%;
+    height: 21%;
+    float: left;
+    background: darkblue;
+    margin: 5%;
     border: 3px solid #ffffff;
 }
-.block2 {
-    width: 100px;
-    height: 100px;
-    border: 3px solid #ffffff;
-}
-.rectangle {
-    width: 100px;
-    height: 70px;
+.fk {
+    width: 100%;
+    height: 70%;
     background: #f5c97b;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.rectangle1 {
-    width: 100px;
-    height: 29px;
+.fk span {
+    font-size: 15px;
+    color: #565656;
+}
+
+.fk1 {
+    width: 100%;
+    height: 30%;
     background: #83b09a;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.combination {
-    width: 100px;
-    height: 15px;
-    display: block;
-    margin-top: 20px;
-    margin-left: -3px;
-    
-    
+
+.fk1 span {
+    font-size: 11.3px;
+    color: #ffffff;
 }
-.one1 {
-    width: 92%;
-    margin: 0 auto;
-    margin-top: 48px;
-    display: flex;
-    justify-content: space-between;
+.combination {
+    width: 100%;
+    margin-top: 10%;
+    display: none;
 }
 
-.block:hover .combination {
-    display: block;
-}
 .block1:hover .combination {
     display: block;
 }
-.block2:hover .combination {
-    display: block;
-}
+
 
 .footer {
     position: fixed;
     z-index: 99999;
     max-width: 768px;
     min-width: 320px;
-    width: 100%;
+    width: 94%;
     height: 60px;
     bottom: 0;
     background: #29bde0;
@@ -139,14 +124,6 @@ body {
     align-items: center;
 }
 
-.one2 {
-    width: 92%;
-    margin: 0 auto;
-    margin-top: 48px;
-    padding-bottom: 60px;
-    display: flex;
-    justify-content: space-between;
-}
 
 .button {
     background-color: transparent;
