--- a/css/task7/tasktwo.css
+++ b/css/task7/tasktwo.css
@@ -1,109 +1,161 @@
+
 body {
-    margin: 0;
-    ;
-}
-.box {
     max-width: 768px;
     min-width: 320px;
     margin: 0 auto;
+}
+.box {
     background: #29bde0;
+    height: 100vh;
 }
 .header {
-    height: 44px;
-    width: 92%;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+}
+.top {
+    width: 96%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.list {
-    width: 20px;
-    height: 20px;
+.logo {
+    width: 25px;
+    height: 25px;
 }
-.text {
-    font-size: 17px;
+.vote {
+    font-size: 20px;
     color: #ffffff;
 }
-.block1 {
-    height: 41px;
-    background: #b9e9f5;
+.remind {
+    height: 50px;
+    background: #b9e9f5;  
     display: flex;
     align-items: center;
+    position: relative;
 }
-.text2 {
-    font-size: 13px;
+
+
+.play {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 15px;
+    z-index: 99999;
+    pointer-events:none;
+   
+}
+
+.MP3 {
+    width: 30px;
+    height: 30px; 
+    position: absolute;
+    right: 15px;
+}
+
+
+.text {
+    font-size: 17px;
     display: inline-block;
     padding-left: 24px;
 }
 .triangle {
- width: 0; 
- height: 0;
- margin-left: 34px;
- margin-bottom: -7px;
- border-width: 8px 4px;
- border-style: solid;
- border-color:#b9e9f5 transparent transparent transparent;
+    width: 0; 
+    height: 0;
+    margin-left: 34px;
+    margin-bottom: -7px;
+    margin-top: -1px;
+    border-width: 10px 7px;
+    border-style: solid;
+    border-color:#b9e9f5 transparent transparent transparent;
 }
-.text3 {
-    font-size: 12px;
-    color: #f5fbfd;
-    padding-left: 32px;
-    
+.text1 {
+    font-size: 15px;
+    color: #ffffff;
+    margin-left: 34px;
+    margin-top: 8px;
+    margin-bottom: 30px;
 }
-.square {
-  width: 86%;
-  margin: 0 auto;
-  margin-top: 38px;
-  display: flex;
-  justify-content: space-between;
-}
- 
-.tx {
-    width: 63px;
-    height: 63px;
-    background: #ffffff;
-    border: 3px solid #ffffff;
+.choice {
+    position: relative;
+    width: 92%;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
 }
-.tx1 {
-    width: 63px;
-    height: 49.5px;
+
+.choice1 {
+    position: relative;
+    width: 92%;
+    top: 45px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+}
+.choice2 {
+    position: relative;
+    width: 92%;
+    top: 88px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.choice3 {
+    position: relative;
+    width: 92%;
+    bottom: -132px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding-bottom: 103px;
+}
+
+
+.block {
+    width: 84px;
+    height: 84px;
+    border: 3px solid #ffffff;
+}
+.one {
+    width: 84px;
+    height: 64px;
     background: #f5c97b;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.tx2 {
-    width: 63px;
-    height: 13.5px;
+.one span {
+    font-size: 15px;
+    color: #565656;
+}
+.two {
+    width: 84px;
+    height: 20px;
     background: #83b09a;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-.text4 {
-    font-size: 15px;
+.two span{
+    font-size: 12px;
+    color: #e0ebe6;
 }
-
-.text5 {
-    font-size: 11.3px;
-    color: #ffffff;
-}
-
 .combination {
-    width: 66px;
-    height: 15px;
-    margin-top: 15px;
-    margin-left: -2px;
+    position: absolute;
+    width: 85.5px;
+    top: 100px;
     display: none;
 }
 
 
-
-.tx:hover .combination {
+.block:hover .combination {
     display: block;
 }
 
@@ -111,29 +163,26 @@ body {
 
 
 
-.square1 {
-    
-  width: 86%;
-  margin: 0 auto;
-  margin-top: 24px;
-  display: flex;
-  justify-content: space-between;
-}
+
+
+
+
 
 
 .footer {
+    position: fixed;
+    z-index: 99999;
     max-width: 768px;
     min-width: 320px;
     width: 100%;
-    height: 80px;
+    height: 60px;
     bottom: 0;
-    position: fixed;
-    z-index: 99999;
+    background: #29bde0;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #29bde0;
 }
+
 
 .button {
     background-color: transparent;
@@ -141,11 +190,7 @@ body {
     font-size: 17px;                                          
     width: 245px;
     height: 43.5px;
-    
     background: #fbb435;
-    position: fixed;
-    z-index: 99999;
     border: 0;
     
 }
-
