--- a/css/task7/task1.css
+++ b/css/task7/task1.css
@@ -3,6 +3,10 @@ body {
     max-width: 768px;
     min-width: 320px;
 }
+
+a {
+    text-decoration: none;
+}
 .box {
     background: #f0f0f0;
 }
@@ -116,6 +120,7 @@ body {
 .text1 {
     font-size: 20px;
     color: #ffffff;
+    
 }
 .block2{
     height: 130px;
