--- a/css/task7/task.css
+++ b/css/task7/task.css
@@ -1,6 +1,6 @@
 
 body {
-    max-width: 768px;
+    max-width: 414px;
     min-width: 320px;
     margin: 0 auto;
 }
@@ -77,66 +77,47 @@ body {
     margin-top: 8px;
     margin-bottom: 30px;
 }
+
+
 .choice {
-    position: relative;
-    width: 92%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
+width: 96%;
+margin: 0 auto;
+margin-top: -42px;
+padding-bottom: 60px;
 }
 
-.choice1 {
-    position: relative;
-    width: 92%;
-    top: 45px;
+.box1 {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-}
-.choice2 {
-    position: relative;
-    width: 92%;
-    top: 88px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-}
+    flex-wrap: wrap;
+    justify-content: space-around;
 
-.choice3 {
-    position: relative;
-    width: 92%;
-    bottom: -132px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    padding-bottom: 103px;
-}
 
+}
 
 .block {
-    width: 84px;
-    height: 84px;
-    border: 3px solid #ffffff;
+   width: 80px;
+   height: 80px;
+   border: 3px solid #ffffff;
+   margin-top: 46px;
+   background: sandybrown;
+   position: relative;
 }
+
 .one {
-    width: 84px;
-    height: 64px;
+    width: 80px;
+    height: 60px;
     background: #f5c97b;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 .one span {
     font-size: 15px;
     color: #565656;
 }
+
 .two {
-    width: 84px;
+    width: 80px;
     height: 20px;
     background: #83b09a;
     display: flex;
@@ -147,23 +128,22 @@ body {
     font-size: 12px;
     color: #e0ebe6;
 }
+
 .combination {
     position: absolute;
-    width: 85.5px;
-    top: 100px;
+    width: 81.5px;
+    top: 95px;
     display: none;
 }
 
-
-
-
-
-
+.block:hover .combination {
+    display: block;
+}
 
 .footer {
     position: fixed;
     z-index: 99999;
-    max-width: 768px;
+    max-width: 414px;
     min-width: 320px;
     width: 100%;
     height: 60px;
@@ -184,4 +164,12 @@ body {
     background: #fbb435;
     border: 0;
     
+}
+
+
+
+.box2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
