--- a/css/task7/task2.css
+++ b/css/task7/task2.css
@@ -113,7 +113,7 @@ body {
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    padding-bottom: 103px;
+    padding-bottom: 55px;
 }
 
 
@@ -158,7 +158,11 @@ body {
 .block:hover .combination {
     display: block;
 }
-
+.between {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .footer {
     position: fixed;
