--- a/css/task7/task2.css
+++ b/css/task7/task2.css
@@ -93,7 +93,8 @@ padding-bottom: 60px;
 
 .block {
     margin: 0 auto;
-    width: 84px;
+    width: 88px;
+    
    
 }
 
@@ -170,3 +171,6 @@ padding-bottom: 60px;
     
 }
 
+.frame {
+    border: 2px solid #ffffff;
+}
