--- a/css/task8/task2.css
+++ b/css/task8/task2.css
@@ -73,7 +73,16 @@
     text-align: center;
 
 }
+@media (max-width: 992px) {
 
+    .navbar-light .navbar-nav .active>.nav-link,
+    .navbar-light .navbar-nav .nav-link.active,
+    .navbar-light .navbar-nav .nav-link.show,
+    .navbar-light .navbar-nav .show>.nav-link {
+        font-size: 16px;
+    }
+
+}
 
 .dhl1 {
     width: 96%;
@@ -194,7 +203,7 @@
 
 .lb1 span {
     color: #29b078;
-    font-size: 12px;
+    font-size: 13px;
 }
 
 .bt {
@@ -205,10 +214,11 @@
 }
 .select {
     line-height: 50px;
-    width: 75px;
+    width: 80px;
+    cursor:pointer;
 }
 
-.select:active .circle {
+.select:active  .circle {
     background: #f9a372;
 }
 .select:active .wz {
@@ -299,8 +309,6 @@
    
         display: flex;
         border-bottom: 1px solid #e6e6e6;
-
-  
 }
 
 .content2 {
@@ -360,7 +368,7 @@
 }
 
 .jns2 {
-    padding-bottom: 39px;
+    padding-bottom: 35.5px;
     margin-top: 30px;
 }
 
@@ -371,8 +379,6 @@ width: 190px;
 justify-content: space-between;
 align-items: center;
 position: relative;
-
-
 }
 
 .bo1 p {
@@ -380,9 +386,26 @@ position: relative;
         color: #ffffff; 
 }
 
-.po {
-  width: 75.28px;
-  height: 19.2px;
+@media (max-width: 567px) {
+   
+
+    .bo1 {
+        width: 160px;
+     
+
+    }
+
+}
+
+@media (min-width: 320px) {
+   
+
+    .bo1 p {
+    line-height: 23.5px;
+     
+
+    }
+
 }
 
 
@@ -391,7 +414,7 @@ position: relative;
 .end {
     display: flex;
     flex-direction: column;
-    margin-top: 30px; 
+    margin-top: 35px; 
     position: absolute;
     right: 24px;
 }
@@ -414,17 +437,17 @@ position: relative;
    
 }
 
-
-@media (min-width: 320px) {
+@media (max-width: 576px) {
    
 
     .end1 {
-  padding-left: 19.5%;
+  display: none;
      
 
     }
 
 }
+
 @media (min-width: 576px) {
    
 
@@ -439,7 +462,7 @@ position: relative;
    
 
     .end1 {
-  padding-left: 28.5%;
+  padding-left: 38%;
      
 
     }
@@ -452,7 +475,7 @@ position: relative;
    
 
     .end1 {
-  padding-left: 34.5%;
+  padding-left: 33%;
      
 
     }
@@ -464,7 +487,7 @@ position: relative;
    
 
     .end1 {
-  padding-left: 36%;
+  padding-left: 34%;
      
 
     }
@@ -474,7 +497,7 @@ position: relative;
    
 
     .end1 {
-  padding-left: 37%;
+  padding-left: 34%;
      
 
     }
@@ -504,10 +527,18 @@ position: relative;
 }
 
 
+@media (max-width: 567px) {
+
+    .bo1 {
+        margin-top: 30px;
+        margin-left: 0;
+   
+    }
+
+}
 
 
-
-@media (max-width: 768px) {
+@media (min-width: 567px) {
 
     .bo1 {
         margin-top: 30px;
@@ -549,7 +580,15 @@ position: relative;
 
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
+
+    .jns2 {
+
+  padding-bottom: 45px;
+    }
+
+}
+@media (min-width: 567px) {
 
     .jns2 {
 
@@ -576,37 +615,56 @@ position: relative;
     .jns {
 
         width: 40%;
-    }
-
-}
-@media (max-width: 768px) {
-   
-
-    .po {
-         height: 28px;
-      
-
-    }
-
+    }  
 }
 
-
-@media (max-width: 768px) {
+@media (max-width: 567px) {
    
 
     .end {
-         top: 16px;
-         right: -32px;
+         bottom: 16px;
+         right: 0px;
       
 
     }
 
 }
 
+@media (min-width: 567px) {
+   
+
+    .end {
+         top: -12px;
+         right: 0px;
+      
+
+    }
+
+}
+
+@media (min-width: 768px) {
+   
+
+    .end {
+         top: 0px;
+         right: 0px;
+      
+
+    }
+
+}
+
+@media (min-width: 320px) {
+
+    .jns {
+
+        width: 100%;
+    }
+
+}
 
 
-
-@media (max-width: 768px) {
+@media (min-width: 567px) {
 
     .jns {
 
@@ -616,14 +674,7 @@ position: relative;
 }
 
 
-@media (max-width: 768px) {
 
-    p {
-
-        line-height: 28px;
-    }
-
-}
 
 @media (max-width: 768px) {
 
@@ -658,6 +709,9 @@ position: relative;
     }
 
 }
+
+
+
 
 
 
